alignment corrected

--- a/style.css
+++ b/style.css
@@ -451,15 +451,15 @@ aside .pages {
 
 .sale-img-btn1 {
   position: absolute;
-  top: 170%;
+  top: 186%;
   left: 17%;
   z-index: 1;
 }
 
 .sale-img-btn2 {
   position: absolute;
-  top: 189%;
-  right: 26%;
+  top: 205%;
+  right: 22%;
   z-index: 1;
 }
 
@@ -492,7 +492,7 @@ aside .pages {
 .box .box-content2 h3,
 .box .box-content3 h3 {
   margin-bottom: 5rem;
-  top: 240%;
+  top: 265%;
   margin-left: 9rem;
   font-size: 3rem;
   color: var(--black-color);
@@ -502,7 +502,7 @@ aside .pages {
 }
 .box-content4 h3 {
   margin-bottom: 5rem;
-  top: 300%;
+  top: 334%;
   margin-left: 6rem;
   font-size: 3rem;
   color: var(--black-color);
@@ -513,7 +513,7 @@ aside .pages {
 .box-content4 .btn-1 {
   z-index: 1;
   position: absolute;
-  top: 310%;
+  top: 344%;
   margin-left: 15rem;
   font-size: 1.5rem;
   padding: 1rem;
@@ -524,7 +524,7 @@ aside .pages {
 .box .box-content3 .btn-1 {
   z-index: 1;
   position: absolute;
-  top: 250%;
+  top: 275%;
   margin-left: 15rem;
   font-size: 1.5rem;
   padding: 1rem;
